# render_basics_impl_theforge

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/render_basics/theforge/: api.h  handlemanager.h
src/: api.cpp  blitencoder.cpp  buffer.cpp  computeencoder.cpp  desciptorset.cpp  descriptorset.cpp  framebuffer.cpp  graphicsencoder.cpp  pipeline.cpp  platonicsolids.cpp  rootsignature.cpp  shader.cpp  stock.cpp  texture.cpp  visdebug.hpp  visualdebug.cpp
